fixed image recognition

--- a/app/views/shopifydbs/search.erb
+++ b/app/views/shopifydbs/search.erb
@@ -1,13 +1,11 @@
 <h1>search results <h1>
-
-<tbody>
+<table>
+  <tbody>
     <% @shopifydbs.each do |shopifydb| %>
       <% if shopifydb.user == current_user or shopifydb.location == "1"%>
       <tr>
         <td><%= shopifydb.treetype %></td>
-        <td><%= shopifydb.price %></td>
-        <td><%= shopifydb.tags %></td>
-        <td style='width:100px; height:100px'><%= link_to image_tag(shopifydb.image,style:'width:100%')  %></td>
+        <td style='width:100px; height:100px'><%= link_to image_tag(shopifydb.image)  %></td>
         <td><%= link_to 'Show', shopifydb %></td>
         <% if shopifydb.user == current_user %>
         <td><%= link_to 'Edit', edit_shopifydb_path(shopifydb) %></td>
@@ -17,3 +15,4 @@
       <% end %>
     <% end %>
   </tbody>
+</table>
