--- a/app/views/shopifydbs/index.html.erb
+++ b/app/views/shopifydbs/index.html.erb
@@ -5,9 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Treetype</th>
-      <th>Price</th>
-      <th>Inventory</th>
+      <th>Title</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,8 +15,6 @@
       <% if shopifydb.user == current_user or shopifydb.location == "1"%>
       <tr>
         <td><%= shopifydb.treetype %></td>
-        <td><%= shopifydb.price %></td>
-        <td><%= shopifydb.tags %></td>
         <td style='width:100px; height:100px'><%= link_to image_tag(shopifydb.image,style:'width:100%')  %></td>
         <td><%= link_to 'Show', shopifydb %></td>
         <% if shopifydb.user == current_user %>
