--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,19 +45,11 @@ body {
   text-align: center;
   background-color: #f1f1f1;
 }
-.img__container {
+.img_cont {
 
-    display: flex;
-    pointer-events: none;
-    padding: 15px 12px;
-    box-sizing: border-box;
-    width: 200px; height: 200px;
-
-    img {
-        margin: auto;
-        max-width: 100%;
-        max-height: 100%;
-    }
+   
+  height:80px;
+  width:100%;
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
