--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,15 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-  	<%= link_to 'Shopify', root_path,class:"navbar-brand" %>
+  	<%= link_to 'Image Repo', root_path,class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "About Us",home_about_path,class:"nav-link"%>
-        </li>
-
         <li class="nav-item">
           <%= link_to "Add",shopifydbs_path,class:"nav-link"%>
         </li>
@@ -35,13 +31,12 @@
               <%= link_to "sign in",
                new_user_session_path,class:"nav-link"%>
             </li> 
-
           <% end %>
-            <form class="form-inline my-2 my-lg-0" action="/search">
-              <input class="form-control mr-sm-2" name="q" type="text" placeholder="search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">search</button>
-            </form> 
       </ul>
+      <form class="d-flex" action="/search">
+        <input class="form-control mr-sm-2" name="q" type="text" placeholder="search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
