--- a/app/views/shopifydbs/index.html.erb
+++ b/app/views/shopifydbs/index.html.erb
@@ -1,32 +1,34 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Public Images</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @shopifydbs.each do |shopifydb| %>
-      <% if shopifydb.user == current_user or shopifydb.location == "1"%>
-      <tr>
-        <td><%= shopifydb.treetype %></td>
-        <td style='width:100px; height:100px'><%= link_to image_tag(shopifydb.image,style:'width:100%')  %></td>
-        <td><%= link_to 'Show', shopifydb %></td>
-        <% if shopifydb.user == current_user %>
-        <td><%= link_to 'Edit', edit_shopifydb_path(shopifydb) %></td>
-        <td><%= link_to 'Destroy', shopifydb, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-      <% end %>
+<%unless notice.nil? %>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong><%= notice %></strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<%end%>
+<div class="row">
+  <div class="column">
+    <h1>Public Images</h1>
+  </div>  
+  <div class="column">
+    <button type="button" class="btn btn-outline-primary"><%= link_to 'Add Image', new_shopifydb_path %></button>
+  </div>  
+</div>
+<div class="row">
+  <% @shopifydbs.each do |shopifydb| %>
+    <% if shopifydb.user == current_user or shopifydb.location == "1"%>
+      <div class="column">
+        <div class="card">
+          <td><%= shopifydb.treetype %></td>
+          <td style='img_cont'><%= link_to image_tag(shopifydb.image,style:'width:100%')  %></td>
+          <td><%= link_to 'More info', shopifydb %></td>
+          <% if shopifydb.user == current_user %>
+            <td><%= link_to 'Edit', edit_shopifydb_path(shopifydb) %></td>
+            <td><%= link_to 'Delete', shopifydb, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  <% end %>
+</div>
+</br>
+<button type="button" class="btn btn-outline-primary"><%= link_to 'Add Image', new_shopifydb_path %></button>
 
-<br>
-
-<%= link_to 'New Shopifydb', new_shopifydb_path %>
